# dbsync

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cdc.rs  commands.rs  diff.rs  error.rs  executor.rs  lib.rs  main.rs  metadata_store.rs  models.rs  secrets.rs  state.rs  sync.rs
src-tauri/src/connectors/: mod.rs  mysql.rs  postgresql.rs
src/lib/: api.ts
