[package]
name = "dbsync"
version = "0.1.0"
description = "Desktop-first heterogeneous database sync workbench"
authors = ["OpenAI Codex"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.96.0"

[lib]
name = "dbsync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres", "chrono", "uuid"] }
tauri-plugin-log = "2"
tauri = { version = "2.11.3", features = [] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
